test_scores/negative_dimers/features/Q02410.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q02410.pkl.xz